# OccupancyMazeSimulator

./: README.md
gridmap_creator/: README.md  generateEnv.js  package-lock.json  package.json
gridmap_creator/public/: manifest.json
gridmap_creator/src/: App.js  styles.css
include/occupancy_maze_simulator/: occupancy_maze_simulator.hpp
occupancy_maze_simulator/: CMakeLists.txt  package.xml
occupancy_maze_simulator/asset/save/: selected_gridmap.pgm  selected_gridmap.yaml
occupancy_maze_simulator/doc/: .$customizable_gridmap_handling.drawio.bkp  customizable_gridmap_handling.drawio  customizable_gridmap_handling_v2.drawio  error_handling.drawio
occupancy_maze_simulator/include/occupancy_maze_simulator/: occupancy_maze_simulator.hpp
occupancy_maze_simulator/launch/: fast_simulation_launch.py  multi_drone_fast_simulation_launch.py  quadruple_fast_simulation_launch.py  simulation_with_selected_gridmap_launch.py
occupancy_maze_simulator/launch/sub/: map_saver_server.launch.py  rosbridge_websocket_launch.xml
occupancy_maze_simulator/misc/: selected_gridmap.pgm  selected_gridmap.yaml
occupancy_maze_simulator/rviz/: config.rviz  drone0_config.rviz  drone1_config.rviz  drone2_config.rviz  drone3_config.rviz
occupancy_maze_simulator/src/: occupancy_maze_simulator.cpp
occupancy_maze_simulator_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
occupancy_maze_simulator_rviz_plugins/src/: button_panel.cpp  button_panel.hpp
rviz/: config.rviz
src/: occupancy_maze_simulator.cpp
