<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>occupancy_maze_simulator_rviz_plugins</name>
  <version>0.0.0</version>
  <description>Resetボタンなどのrvizパネル</description>
  <maintainer email="m.izumita@aist.go.jp">Masashi Izumita</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>std_msgs</depend>

  <build_export_depend>qtbase5-dev</build_export_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
